# FG24-engine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json.example  README.md  TODO.txt  vcpkg-configuration.json  vcpkg.json
assets/: default.lvl
assets/mesh/: barrel.mdl  barrel2.mdl  barrel3.mdl  blend1.mdl  blend2.mdl  box_uv.mdl  box_uv.mtl  cube.mdl  sphere.mdl  suzanne_tri.mdl  triangtest_cube.mdl  triangtest_pie.mdl  triangtest_quad.mdl
assets/shaders/: flat.frag  flat.vert  flatblend.vert  lightpass.frag  lightpass.vert  phong.frag  phong.vert  phongshadow.frag  phongshadow.vert  phongshadowblend.vert  shader.frag  shader.vert  simple.frag  simple.vert  textured.frag  textured.vert
docs/: Acknowledgments.txt  TODO.txt  code_convention.md
editor/: CMakeLists.txt  Entity.cpp  Entity.hpp  EntityDelegate.cpp  EntityDelegate.hpp  EntityManager.cpp  EntityManager.hpp  EntityModel.cpp  EntityModel.hpp  EntityProperty.cpp  EntityProperty.hpp  EntityPropertyModel.cpp  EntityPropertyModel.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp
engine/: CMakeLists.txt  Globals.cpp  Globals.hpp  Main.cpp
engine/framework/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  CameraManager.cpp  CameraManager.hpp  Editor.cpp  Editor.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  ExampleManager.cpp  ExampleManager.hpp  KeyInput.cpp  KeyInput.hpp  LevelSaver.cpp  LevelSaver.hpp  Light.cpp  Light.hpp  Lighting.cpp  Lighting.hpp  MeshManager.cpp  MeshManager.hpp  Message.hpp  Session.cpp  Session.hpp  Transform.cpp  Transform.hpp
engine/physics/: BoxCollider.hpp  Collider.cpp  Collider.hpp  Collision.hpp  Intersect.cpp  Intersect.hpp  Intersections.hpp  PhysicsSimulation.cpp  PhysicsSimulation.hpp  Ray.cpp  Ray.hpp  SphereCollider.hpp
engine/renderer/: Mesh.cpp  Mesh.hpp  MeshBlend.cpp  MeshBlend.hpp  MeshSingle.cpp  MeshSingle.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShadowMapping.cpp  ShadowMapping.hpp  SimpleShapes.cpp  SimpleShapes.hpp  Texture.cpp  Texture.hpp  VertexData.hpp
engine/tests/: ThreadTest.hpp
engine/utils/: File.cpp  File.hpp  Filepath.cpp  Filepath.hpp  Memory.cpp  Memory.hpp  ObjToMdl.cpp  ObjToMdl.hpp  ThreadPool.cpp  ThreadPool.hpp  Vec.cpp  Vec.hpp  Writable.hpp
engine/utils/containers/: Array.hpp  Vec3.hpp
includes/glad/: gl.h
src/: Globals.cpp  Globals.hpp  Main.cpp
src/engine/: Engine.cpp  Engine.hpp
src/engine/core/: Transform.cpp  Transform.hpp
src/engine/core/actor/: Actor.cpp  Actor.hpp
src/engine/inputmanager/: InputManager.cpp  InputManager.hpp
src/framework/: Actor.cpp  Actor.hpp  KeyInput.cpp  Session.cpp  Session.hpp
src/renderer/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Renderer_temp.cpp  Renderer_temp.hpp  Shader.cpp  Shader.hpp  SimpleShapes.cpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp
src/renderer/camera/: Camera.cpp  Camera.hpp
src/renderer/mesh/: Mesh.cpp  Mesh.hpp
src/renderer/mesh/shapes/: Cube.cpp  Cube.hpp
src/renderer/shader/: Shader.cpp  Shader.hpp
src/tools/: Editor.cpp  Editor.hpp
src/utils/: File.cpp  File.hpp  files.cpp  files.hpp
